[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
warp = "0.3.2"
hyper = "0.14.20"
listenfd = "1.0.0"
anyhow = "1.0"
serde = "1.0.144"
serde_yaml = "0.9"
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde-aux = "4"
serde_json = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
thiserror = "1.0.35"
# surrealdb = "1.0.0-beta.7"
# scylladb = "0.1.10"
